adding whats  app changes
